Fix Bug 312181 - Blogilo don't unescape blog html titles correctly

FIXED-IN: 4.10.1
BUG: 312181